feat: добавить формирование шаблона акта испытаний
